# n2v-tasks

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
src/n2v_tasks/prefect_task/: environment_utils.py  generate_train_data.py  path_utils.py  predict.py  train.py
src/n2v_tasks/task/: environment_utils.py  generate_train_data.py  path_utils.py  predict.py  train.py
