[metadata]
name = n2v_tasks
description = Tasks used to run N2V.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-faim/n2v-tasks.git
author = Tim-Oliver Buchholz
author_email = tim-oliver.buchholz@fmi.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/fmi-faim/n2v-tasks/issues
    Documentation = https://github.com/fmi-faim/n2v-tasks#README.md
    Source Code = https://github.com/fmi-faim/n2v-tasks
    User Support = https://github.com/fmi-faim/n2v-tasks/issues

[options]
packages = find:
install_requires =
    airtable
    distro
    n2v
    prefect[github]==1.3.0
    tensorflow
    wandb
python_requires = >=3.8
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
